--- a/projects/software/index.html
+++ b/projects/software/index.html
@@ -67,17 +67,17 @@
         <p>Future home of an open source library for the rapid Monte Carlo
 simulation of polymers. The data structure and algorithms are described
 in the following papers:
-<em>Efficient implementation of the pivot algorithm for
-    self&#150;avoiding walks,</em> <a
+N. Clisby, Efficient implementation of the pivot algorithm for
+    self&#150;avoiding walks, <a
     href="http://www.arxiv.org/abs/1005.1444">arXiv:1005.1444</a>, <a
     href="http://dx.doi.org/10.1007/s10955-010-9994-8">J. Stat.
     Phys.</a> <b>140</b>:349&#150;392 (2010), and 
-<em>Accurate estimate of the critical exponent &#957; for
+N. Clisby, Accurate estimate of the critical exponent &#957; for
 self&#150;avoiding walks via a fast implementation of the pivot
-algorithm,</em> <a
+algorithm, <a
     href="http://www.arxiv.org/abs/1002.0494">arXiv:1002.0494</a>, <a
     href="http://dx.doi.org/10.1103/PhysRevLett.104.055702">Phys. Rev.
-    Lett.</a><b>104</b>, 055702 (2010).
+    Lett.</a> <b>104</b>, 055702 (2010).
 </p>
 <p>
 At the moment I have a working, efficient implementation of the
@@ -95,7 +95,7 @@ walks too.
 <p>
 In addition, I have an initial version of a far more flexible software
 library (<em>version 2</em>). I've tested it a little and it seems to be correct (using it
-for simulations of the hydrogen peroxide lattice), and it can be
+for simulations of self-avoiding walks on the hydrogen peroxide lattice), and it can be
 extended to a wide range of models on any lattice or in the continuum.
 But, it is
 significantly slower than my original code, and still clunkier than I
