Added blurb for projects page.

--- a/projects/index.html
+++ b/projects/index.html
@@ -64,6 +64,23 @@
     <div id="contentblock">
         <div id="content">
             <h1>Projects</h1>
+            <p>
+            In this section you will find pages for various projects I
+            have worked on, particularly those with 
+            a non-publication output such as a simulation, or an
+            animation, or software tools.
+            </p>
+            <p>
+            I'm very interested in using mathematical visualisations as
+            a tool in both education (igniting curiosity, explaining difficult
+            concepts) and research (developing intuition and testing
+            ideas). My reasoning tends to be highly
+            dependent on finding appropriate visual imagery, and the
+            right computer tool can be enormously helpful. 
+            </p>
+            <p>
+            Please look around!
+            </p>
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
