Added blurb for research page.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,19 @@
                 maintaining the new version indefinitely (at least the
                 url's), I've chosen to create
                 a simple website using only html, css, and javascript.
+                My apologies that there are still a few rough edges! In
+                particular I'd like to find time to both make my
+                research more accessible to a broader audience, and to
+                add more depth for those who are interested.
                 </p>
+                <!--<h3>Updates</h3>-->
+                <!--[><table width="100%" style="table-layout:fixed;"><]-->
+                <!--<table>-->
+                    <!--<tr>-->
+                        <!--<td>30/12/2014</td><td>This homepage-->
+                            <!--created.</td>-->
+                    <!--</tr>-->
+                <!--</table>-->
             </div> <!-- content -->
         </div> <!-- contentblock -->
         <div id="push"></div>
