--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -100,11 +100,15 @@
             scripting, and research into the specific applications.
             </p>
             <p>
-            You can play with the app here (not live yet).
+            The prototype version should be web visible (and playable)
+            soon.
             </p>
-            <p>
-            Brief instructions:
-            </p>
+            <!--<p>-->
+            <!--You can play with the app here (not live yet).-->
+            <!--</p>-->
+            <!--<p>-->
+            <!--Brief instructions:-->
+            <!--</p>-->
 
         </div> <!-- content -->
     </div> <!-- contentblock -->
