--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -56,6 +56,10 @@
     <div id="contentblock">
         <div id="content">
             <h1>Topics</h1>
+            <p>
+            30/12/14: Empty for now, I will be progressively adding
+            material here over the next few weeks.
+            </p>
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
