Just added meta-data description.

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>projects</title>
     <link rel="canonical" href="/projects/" />
+    <meta name="description" content="Projects section of Nathan
+    Clisby's homepage, provides a brief overview and then links to
+    various projects including visual representation of the pivot
+    algorithm for self-avoiding walks and Hamiltonian paths.">
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
