--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>Nathan Clisby's homepage</title>
     <link rel="canonical" href="/" />
+    <meta name="description" content="Homepage of Nathan Clisby. Landing
+    site for information about my research and to provide resources such
+    as a software library for simulating self-avoiding walks via the pivot
+    algorithm, and mathematical visualisations.">
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
