Added header for publications page.

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -57,6 +57,7 @@
         <div id="contentblock">
             <div id="content">
 
+                <h1> Publications </h1>
                 <p>
                 The easiest way to access details of most my publications is via my <a
                     href="http://arxiv.org/a/clisby_n_1">arXiv</a> and 
@@ -65,7 +66,7 @@
                 </p>
 
 
-                <h3> Publications </h3>
+                <h3> Articles, book chapters, and other publications </h3>
                 <table>
                     <tr><td>
                             Nathan Clisby, Endless self-avoiding walks,
