--- a/projects/hamiltonian_path/index.html
+++ b/projects/hamiltonian_path/index.html
@@ -182,9 +182,7 @@ Circuits only: <input type="checkbox" name="is_circuit" id="is_circuit" value="i
     <!--<canvas>-->
     <p>Canvas element not supported in your browser.</p>
     </canvas>
-</center><br/>
-<center>
-        </center><br/>
+</center>
 </p>
 <p>
 <div class="spacer"></div>
