--- a/research/index.html
+++ b/research/index.html
@@ -108,18 +108,18 @@
             calculation of virial coefficients for hard spheres. Hard
             spheres are an excellent model of colloids and are
             historically important for a host of reasons, including the
-            fact that when compressed the hard sphere system change state
+            fact that when compressed the hard sphere system changes state
             from a fluid to a solid. However, much
             remains to be done in this direction!
             </p>
             <p>
-            More recently my primary research focus has been to build upon the intuition
+            More recently, my primary research focus has been to build upon the intuition
             I have gained into the efficient Monte Carlo simulation of self-avoiding
-            walks via the pivot algorithm to a wide variety of other
-            problems, both in the field of statistical mechanics and
-            more broadly. I believe that significant progress
+            walks via the pivot algorithm.
+            I believe that significant progress
             is possible
-            for a wide range of applications where Markov chain Monte Carlo is the state
+            for a wide range of applications, both in the field of statistical mechanics and
+            more broadly, for which Markov chain Monte Carlo is the state
             of the art.
             </p>
             <p>
