--- a/research/index.html
+++ b/research/index.html
@@ -119,7 +119,7 @@
             I believe that significant progress
             is possible
             for a wide range of applications, both in the field of statistical mechanics and
-            more broadly, for which Markov chain Monte Carlo is the state
+            more broadly, for which either simple sampling or Markov chain Monte Carlo is the state
             of the art.
             </p>
             <p>
