Fixed backtracker instructions

--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -176,7 +176,7 @@
                     <td>Search the backtracking tree starting from a
                         particular node.
                     </td>
-                    <td>Ctrl-click, Command-click, or Windows
+                    <td>Alt-click, Command-click / Windows
                         key-click.</td>
                 </tr>
                 <tr>
