Opens app in new tab

--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -83,7 +83,7 @@
             their own heuristics (intuition).
             </p>
             <p>
-            A prototype version can be played <a href="app/">here</a>
+            A prototype version can be played <a href="app/" target="_blank">here</a>
             for now; it will likely move to a different url in future.
             </p>
             <p>
