Added logo into all of the headers. Fiddly, and messy.

--- a/contact/index.html
+++ b/contact/index.html
@@ -56,7 +56,16 @@
 
         <div id="contentblock">
             <div id="content">
-                <h1>Contact details</h1>
+
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Contact details
+                </div>
+                </h1>
+
+                <p>
                 <table>
                     <tr><td>Nathan Clisby</td></tr>
                     <tr><td>ARC Centre of Excellence for Mathematics and
@@ -75,7 +84,7 @@
                             (Office)</td></tr>
                     <tr><td>Email:  </td><td> clisby@gmail.com </td></tr>
                 </table>
-
+                </p>
             </div> <!-- content -->
         </div> <!-- contentblock -->
         <div id="push"></div>
