--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
 
         <div id="contentblock">
             <div id="content">
-                <h1>Nathan Clisby's homepage</h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:-0.3em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                    Nathan Clisby's homepage
+                </div>
+                </h1>
                 <p>
                 <div class="image">
                 <img src="nathan_portrait.jpg" alt="me" width="20%"
