--- a/links/index.html
+++ b/links/index.html
@@ -56,7 +56,13 @@
 
         <div id="contentblock">
             <div id="content">
-                <h1>Assorted links</h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.3em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Assorted links
+                </div>
+                </h1>
                 <p>
                 These links are from my old webpage, and are several
                 years out-of-date.
