--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -63,7 +63,13 @@
 
     <div id="contentblock">
         <div id="content">
-            <h1>Backtracker</h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Backtracker
+                </div>
+                </h1>
             <p>
             Inspired by an idea from <a
                 href="http://www.newcastle.edu.au/profile/judy-anne-osborn">Judy-anne
