--- a/projects/hamiltonian_path/index.html
+++ b/projects/hamiltonian_path/index.html
@@ -92,7 +92,13 @@
         <div id="content">
 <!--<center>-->
 <!--<h1 style="color:#07c">Hamiltonian path generator</h1>-->
-<h1>Hamiltonian path generator</h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Hamiltonian path generator
+                </div>
+                </h1>
 <!--<div style="text-align:left;width:800px">-->
 <p>
 <b>Author:</b> Nathan Clisby, November 2014
