--- a/projects/index.html
+++ b/projects/index.html
@@ -67,7 +67,13 @@
 
     <div id="contentblock">
         <div id="content">
-            <h1>Projects</h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Projects
+                </div>
+                </h1>
             <p>
             In this section you will find pages for various projects I
             have worked on, particularly those with 
