--- a/projects/sm_simulator/index.html
+++ b/projects/sm_simulator/index.html
@@ -105,7 +105,13 @@
     </div> <!-- topbar -->
     <div id="contentblock">
         <div id="content">
-        <h1><a id="intro">Statistical mechanics simulator</a></h1>
+                <h1 id="intro" style="display:inline-block;line-height:1.0em;margin-bottom:-0.3em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Statistical mechanics simulator
+                </div>
+                </h1>
         <!--<p>Statistical mechanics simulator due to <a href="http://lattice.complex.unimelb.edu.au/home/">Nathan Clisby</a>, 2013.</p>-->
         <p>
         <b>Author:</b> Nathan Clisby, 2013
