--- a/projects/software/index.html
+++ b/projects/software/index.html
@@ -63,7 +63,13 @@
     </div> <!-- topbar -->
     <div id="contentblock">
         <div id="content">
-        <h1>Software for sampling self-avoiding walks</h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Software for sampling self-avoiding walks
+                </div>
+                </h1>
         <p>Future home of an open source library for the rapid Monte Carlo
 simulation of polymers. The data structure and algorithms are described
 in the following papers:
