--- a/research/index.html
+++ b/research/index.html
@@ -59,7 +59,13 @@
 
     <div id="contentblock">
         <div id="content">
-            <h1>Research</h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Research
+                </div>
+                </h1>
             <p>
             Below is a synopsis of my
             research interests, with a more detailed list of possible
