--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -56,8 +56,13 @@
 
         <div id="contentblock">
             <div id="content">
-
-                <h1> Publications </h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                Publications
+                </div>
+                </h1>
                 <p>
                 The easiest way to access details of most my publications is via my <a
                     href="http://arxiv.org/a/clisby_n_1">arXiv</a> and 
