--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -55,7 +55,13 @@
 
     <div id="contentblock">
         <div id="content">
-            <h1>Topics</h1>
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
+                <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
+                <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
+                <div style="display:block;float:left;clear:right;vertical-align:top;">
+                    Topics
+                </div>
+                </h1>
             <p>
             30/12/14: Empty for now, I will be progressively adding
             material here over the next few weeks.
@@ -73,177 +79,3 @@
     </div> <!-- bottombar -->
 </body>
 </html>
-            <p>
-            This is Nathan's webpage.
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <p>
-            It does sound like an exciting adventure is in store, 
-            but at the same time you can't help but wonder about the
-            motives of the mysterious owner.
-            </p>
-            <p>
-            It does sound like an exciting adventure is in store, 
-            but at the same time you can't help but wonder about the
-            motives of the mysterious owner.
-            </p>
-            <p>
-            It does sound like an exciting adventure is in store, 
-            but at the same time you can't help but wonder about the
-            motives of the mysterious owner.
-            </p>
-
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            <blockquote>
-                A very nice quote.
-            </blockquote>
-            </p>
-
-            <h2>Updates/Highlights</h2>
